[project]
name = "MQGA"
dynamic = ["version"]
description = "Mostly a QQ Group Assistant"
authors = [
    {name = "线卷",email = ""},
    {name = "迷你哆啦",email = ""},
    {name = "小女不才只会用膳",email = ""},
]
dependencies = [
    "tomli==2.0.1",
    "tomli-w>=1.0.0",
    "pydantic>=2.4.2",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "tortoise-orm>=0.20.0",
    "pydantic-settings>=2.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = {source = "file", path = "src/mqga/__version__.py"}

[tool.pdm.scripts]
# bot = {cmd = "python bot.py"}
bot = {cmd = "python -m mqga"}

[tool.ruff.lint]
ignore = ["E501", "E402"]
# E501: Line too long
# E402: Module level import not at top of file

[tool.pdm.dev-dependencies]
dev = [
    "-e mqga_plugin @ file:///${PROJECT_ROOT}/mqga_plugin",
    "watchfiles>=0.21.0",
]
